--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     
 	
 	
-<script src="font1.js" ></script>
+<script src="font.js" ></script>
 <!--音乐入口-->
 <script>
 function play() {
@@ -121,7 +121,7 @@ function play() {
 <!--ѳް-->
 <canvas id="sakura" style=" position: absolute ;z-index: 1"></canvas>
 <!-- 音乐入口 -->
-<audio id="music" src="tytw.mp3" loop autoplay></audio>
+<audio id="music" src="https://sharefs.ali.kugou.com/202201211457/8d8daf020278d5c112c5a0514b5a0b26/KGTX/CLTX001/fbc27dd4530a9cfb4020773e3e424f32.mp3" loop autoplay></audio>
 <!-- τؖ -->
 <div style="position: absolute ;z-index: 9999" id="mainDiv">
     <div id="content">
