--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@ function play() {
 <div style="position: absolute ;z-index: 9999" id="mainDiv">
     <div id="content">
         <div id="code">
-            <span class="comments">ϒքЮɋ</span><br/>
-            <span class="space"/><span class="comments">lalalalalallal</span><br/>
-            <span class="space"/><span class="comments">啦啦啦啦啦啦啦</span><br/>
-            <span class="space"/><span class="comments">ţքђأࠬVìˇϒһʺք׷ȳc</span><br/>
-            <span class="space"/>ϒܡÿһͬո؅Цsìۍţ˵էвì<br/>
-            <span class="space"/>ϒܡÿһέԫţրʹέвՙɫĎЧì<br/>
-            <span class="space"/>ϒܡոţȥ̹ԐţЫȥք֘׽ì<br/>
-            <span class="space"/>ƣţŖߴţЦ<br/>
-            <span class="space"/>zޭţʺļא̹Ԑք֣֣֎֎c<br/>
-            <span class="space"/>ϒǚս֢һʺԫţһǰ؟ڽì<br/>
-            <span class="space"/>؟սޡͷՙܘͷߴޡһʺǦ۪ú֘ì<br/>
+            <span class="comments">亲爱的月</span><br/>
+            <span class="space"/><span class="comments">这样的夜里</span><br/>
+            <span class="space"/><span class="comments">只有你和我</span><br/>
+            <span class="space"/><span class="comments">轻轻摇曳</span><br/>
+            <span class="space"/>我想用鼻梁<br/>
+            <span class="space"/>去触碰你的脖颈<br/>
+            <span class="space"/>像月亮和星空缠绕<br/>
+            <span class="space"/>洗发水散发芬芳<br/>
+            <span class="space"/>紫罗兰在我心头绽放<br/>
+            <span class="space"/>如果能亲吻你的脸颊<br/>
+            <span class="space"/>应当能品尝到甜蜜与阳光<br/>
             <span class="space"/>ϒǚսԫţýýҤOì<br/>
             <span class="space"/>ֈϒćOսń׹Ҳȥһì<br/>
             <span class="space"/>۹Ŝú՘؅һʺքђأࠬVc<br/>
@@ -151,12 +151,12 @@ function play() {
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
-                    XXX,I LOVE YOUá
+                    Yue,I LOVE YOU
                     <div id="elapseClock"></div>
                 </div>
                 <div id="loveu">
                     Love u forever and ever.<br/>
-                    <div class="signature">- LXJ</div>
+                    <div class="signature">- LQ</div>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@ function play() {
     var offsetX = $("#loveHeart").width() / 2;
     var offsetY = $("#loveHeart").height() / 2 - 55;
     var together = new Date();
-    together.setFullYear(2017, 1, 25);
+    together.setFullYear(2007, 1, 22);
     together.setHours(0);
     together.setMinutes(0);
     together.setSeconds(0);
