--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             float: left;
             width: 440px;
             height: 400px;
-            color: #333;
+            color: #ffc0cb;
             font-family: "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New", "sans-serif";
             font-size: 15px;
             line-height: 1.5
